--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -187,9 +187,11 @@ img {
 .nav__link {
   display: flex;
   align-items: center;
+  justify-content: space-between; 
   color: var(--first-color-light);
   transition: var(--tran-03);
-  padding: 0.5rem;
+  gap: 0.8rem; /* ajusta separación entre iconos y texto */
+  padding: 0.1rem;
   border-radius: 0.25rem;
 }
 
@@ -216,14 +218,15 @@ img {
 /* Dropdown styles */
 .nav__dropdown {
   overflow: hidden;
-  max-height: 21px;
+
+  max-height: 50px;
   transition: var(--tran-05);
 }
 
 .nav__dropdown-collapse {
   background-color: var(--color-border-card);
   border-radius: 0.25rem;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -301,7 +304,7 @@ img {
 .main-panel__title {
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
-  color: var(--color-main-contrast);
+  color: var(--container-color);
   text-align: center;
 }
 
@@ -415,7 +418,17 @@ img {
   }
   
   .nav__link {
-    padding: 0.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    color: var(--first-color-light);
+    transition: var(--tran-03);
+    gap: 0.8rem; /* ajusta separación entre iconos y texto */
+    padding: 0.1rem;
+    border-radius: 0.25rem;
+    
+    
+   
   }
 }
 
